--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-node",
+  "name": "aws-serverless-node-lambda",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
